Added geoip blocking

--- a/blog/wp-content/themes/essay/style.css
+++ b/blog/wp-content/themes/essay/style.css
@@ -1881,7 +1881,7 @@ label a{
 .benefits-list li{
 	margin: 0;
 	padding: 0;
-	color: #000;
+	color: #5A5D66;
 	overflow: hidden;
 	font-weight: 400;
 	line-height: 40px;
