--- a/templates/html/footer.html
+++ b/templates/html/footer.html
@@ -56,14 +56,27 @@
      <div class="row">
       <div class="col-md-6 col-sm-12">Copyright © 2013-2014 All Rights Reserved | <a href="{% url 'home' %}">essaycoffee.com</a></div>
       <div class="col-md-6 col-sm-12 text-right">
+	  {% comment %}
        <span>We accept:</span>
        <ul class="merchants">
         <li><a href="#"><img src="{{ STATIC_URL }}images/demo/paypal.png" alt="paypal" title="Paypal"></a></li>
         <li><a href="#"><img src="{{ STATIC_URL }}images/demo/moneybookers.png" alt="moneybookers" title="Moneybookers"></a></li>
        </ul>
+	   {% endcomment %}
       </div>
      </div>
     </div>
   </div>
 
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-56663810-1', 'auto');
+	  ga('send', 'pageview');
+
+	</script>
+  
 </footer>
