--- a/templates/orders/new-order.html
+++ b/templates/orders/new-order.html
@@ -344,8 +344,8 @@
        </span>
       </label>
       <div class="col-sm-6">
-       <label class="radio-inline" style="border:1px #ddd solid; height:34px; margin-right:10px;  padding:6px 12px; float:left;">
-        <input type="radio" checked name="materials" autocomplete="off"><span><img style="width: 70px;" src="https://www.liqpay.com/static/img/logo.png" alt=""></span>
+       <label class="radio-inline" style="border:1px #ddd solid; margin-right:10px; {% comment %}height:34px;{% endcomment %} padding:6px 12px; float:left;">
+        <input type="radio" checked name="materials" autocomplete="off"><span><img {% comment %}style="width: 70px;"{% endcomment %} src="{{ STATIC_URL }}/images/2co.png" alt=""></span>
        </label>
        {% comment %}
        <label class="radio-inline" style="border:1px #ddd solid; height:34px; margin-left:0px;  margin-top:-1px; padding:6px 12px;">
@@ -359,7 +359,7 @@
       <label class="js-total-price col-sm-5 control-label text-left">$0.00</label>
      </div>
      <div class="form-group">
-      <div class="col-sm-12 text-center">
+      <div class="col-sm-12" style="text-align:center;">
        <p>By clicking "Proceed to safe payment" button you agree to the <a href="{% url 'terms-conditions' %}" rel="nofollow" target="_blank">Terms and Conditions</a>, <a href="{% url 'money-back-guarantee' %}" rel="nofollow" target="_blank">MoneyBack Policy</a> and <a href="{% url 'privacy-policy' %}" rel="nofollow" target="_blank">Privacy Policy</a></p> 
       </div>
      </div>
