--- a/templates/auth/registration.html
+++ b/templates/auth/registration.html
@@ -95,20 +95,9 @@
        </div>
       </fieldset>
       <fieldset>
-       <legend>Your password</legend>
-       <div class="form-group {% if form.password.errors %} has-error {% endif %}">
-        <label class="col-sm-4 control-label">Password <span class="require">*</span></label>
-        <div class="col-sm-8">
-         <input type="password" name="password" class="form-control" value="" autocomplete="off" required>
-        </div>
-       </div>
-       <div class="form-group {% if form.password.errors %} has-error {% endif %}">
-        <label class="col-sm-4 control-label">Confirm password <span class="require">*</span></label>
-        <div class="col-sm-8">
-         <input type="password" name="password2" class="form-control" value="" autocomplete="off" required>
-         {% if form.password.errors %}<span class="validation-message">{{form.password.errors|striptags}}</span>{% endif %}
-        </div>
-       </div>
+      <input type="hidden" name="password" value="GTBV151yhe">
+      <input type="hidden" name="password2" value="GTBV151yhe">
+      <input type="hidden" name="gen_pass" value="GTBV151yhe">
       </fieldset>
       <div class="form-group submit-group">
        <label class="col-sm-4 control-label">&nbsp;</label>
