--- a/templates/html/sidebar-left.html
+++ b/templates/html/sidebar-left.html
@@ -9,27 +9,27 @@
 	<h3>Best Prices!</h3>
 	<ul class="price-list">
 		<li>
-			<span class="tariff-descr">High School:</span>
+			<span class="tariff-descr">High School</span>
 			<div class="tag-bg"><span class="currency">$<span class="price-numb">12.<span>99</span></span></span>/page</div>
 		</li>
 
 		<li>
-			<span class="tariff-descr">College:</span>
+			<span class="tariff-descr">College</span>
 			<div class="tag-bg"><span class="currency">$<span class="price-numb">15.<span>99</span></span></span>/page</div>
 		</li>
 
 		<li>
-			<span class="tariff-descr">University:</span>
+			<span class="tariff-descr">University</span>
 			<div class="tag-bg"><span class="currency">$<span class="price-numb">17.<span>99</span></span></span>/page</div>
 		</li>
 
 		<li>
-			<span class="tariff-descr">Master's:</span>
+			<span class="tariff-descr">Master's</span>
 			<div class="tag-bg"><span class="currency">$<span class="price-numb">22.<span>99</span></span></span>/page</div>
 		</li>
 
 		<li>
-			<span class="tariff-descr">Ph. D.:</span>
+			<span class="tariff-descr">Ph. D.</span>
 			<div class="tag-bg"><span class="currency">$<span class="price-numb">27.<span>99</span></span></span>/page</div>
 		</li>
 	</ul>
